--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,7 +2,6 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 15%;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
@@ -18,6 +17,7 @@ header {
 }
 
 .navigation {
+  padding-top: 10px;
   width: 100%;
 
   display: flex;
@@ -29,6 +29,7 @@ header {
 .lnk-link {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .img-logo {
@@ -51,17 +52,26 @@ header {
 
 .nav-btn {
   padding: 5px;
+  min-width: 23%;
 }
 
 @media (min-width: 641px) and (max-width: 1007px) {
-  header {
-    outline: 1px solid green;
+  span {
+    font-size: 18px;
+    font-weight: bold;
   }
 }
 
 @media (min-width: 1008px) {
   header {
-    outline: 1px solid blue;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 70px;
+  }
+  .lnk-logo {
+    width: 50%;
+    justify-content: left;
+    margin-left: 10px;
   }
   .navigation {
     width: 50%;
@@ -71,8 +81,13 @@ header {
   }
 
   .nav-btn {
-    outline: 1px solid purple;
     height: 40px;
-    min-width: 23%;
+  }
+  .nav-btn:hover {
+    text-decoration: underline;
+  }
+  span {
+    font-size: 18px;
+    font-weight: bold;
   }
 }
