[Update] Made header sticky, and small fixes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="sticky" >
   <div class="lnk-logo">
     <a class="lnk-link">
       <img src="../../assets/svg/translating.svg" alt="Logo-NomeEmpresa" class="img-logo">
