--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,8 +3,13 @@ header {
   flex-direction: column;
   align-items: center;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: rgb(251, 251, 251);
 }
-
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 .lnk-logo {
   display: flex;
   justify-content: center;
