[Update] Started above the fold design

--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,1 +1,8 @@
-<p style="margin-top: 500px;">ATF works</p>
+<section class="atf">
+  <div class="atf-left">
+    <h1></h1>
+  </div>
+  <div class="atf-right">
+    <img src="../../assets/img/business-people-png-hd-28.png" alt="">
+  </div>
+</section>
