--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <app-header></app-header>
   <app-above-the-fold></app-above-the-fold>
-  <section id="services">Services</section>
+  <section id="services" style="margin-top: 500px;">Services</section>
   <section id="recommendations">Recommendations</section>
   <section id="contact">Contact</section>
   <footer>Footer</footer>
