--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,8 +1,6 @@
 <section class="atf">
-  <div class="atf-left">
-    <h1></h1>
-  </div>
-  <div class="atf-right">
-    <img src="../../assets/img/business-people-png-hd-28.png" alt="">
+  <div class="atf-content">
+    <h1>“Translation is that which transforms everything so that nothing changes.”</h1>
+    <span>– Günter Grass</span>
   </div>
 </section>
